{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 27,
  "lineage": "d5f5705e-2d21-f0ce-0cf3-78fcdc9bd944",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202910432264:internet-gateway/igw-0fb0c956fddbb7ab2",
            "id": "igw-0fb0c956fddbb7ab2",
            "owner_id": "202910432264",
            "tags": {
              "Department": "DevOps",
              "Environment": "dev",
              "Name": "igw-development-Test-Sample",
              "PrimaryContact": "test@example.com",
              "ProjectName": "Test-Sample",
              "Terraform": "True",
              "description": "igw for development-Test-Sample"
            },
            "tags_all": {
              "Department": "DevOps",
              "Environment": "dev",
              "Name": "igw-development-Test-Sample",
              "PrimaryContact": "test@example.com",
              "ProjectName": "Test-Sample",
              "Terraform": "True",
              "description": "igw for development-Test-Sample"
            },
            "vpc_id": "vpc-02bdcc11f28d4258c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202910432264:route-table/rtb-0cc7dc6f2c612ef04",
            "id": "rtb-0cc7dc6f2c612ef04",
            "owner_id": "202910432264",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fb0c956fddbb7ab2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Department": "DevOps",
              "Environment": "dev",
              "Name": "private-rt-development-Test-Sample",
              "PrimaryContact": "test@example.com",
              "ProjectName": "Test-Sample",
              "Terraform": "True",
              "description": "private-rt for development-Test-Sample"
            },
            "tags_all": {
              "Department": "DevOps",
              "Environment": "dev",
              "Name": "private-rt-development-Test-Sample",
              "PrimaryContact": "test@example.com",
              "ProjectName": "Test-Sample",
              "Terraform": "True",
              "description": "private-rt for development-Test-Sample"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bdcc11f28d4258c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202910432264:route-table/rtb-00c21a8cab99d2153",
            "id": "rtb-00c21a8cab99d2153",
            "owner_id": "202910432264",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fb0c956fddbb7ab2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Department": "DevOps",
              "Environment": "dev",
              "Name": "public-rt-development-Test-Sample",
              "PrimaryContact": "test@example.com",
              "ProjectName": "Test-Sample",
              "Terraform": "True",
              "description": "public-rt for development-Test-Sample"
            },
            "tags_all": {
              "Department": "DevOps",
              "Environment": "dev",
              "Name": "public-rt-development-Test-Sample",
              "PrimaryContact": "test@example.com",
              "ProjectName": "Test-Sample",
              "Terraform": "True",
              "description": "public-rt for development-Test-Sample"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bdcc11f28d4258c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5ab831daf245c47",
            "route_table_id": "rtb-0cc7dc6f2c612ef04",
            "subnet_id": "subnet-09fad1579e2363039"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0868c72ecbf3a5d0e",
            "route_table_id": "rtb-00c21a8cab99d2153",
            "subnet_id": "subnet-057f0c9b1d2b78a74"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202910432264:subnet/subnet-09fad1579e2363039",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fad1579e2363039",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202910432264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "DevOps",
              "Environment": "dev",
              "Name": "private-subnet-development-Test-Sample",
              "PrimaryContact": "test@example.com",
              "ProjectName": "Test-Sample",
              "Terraform": "True",
              "description": "private subnet for development-Test-Sample"
            },
            "tags_all": {
              "Department": "DevOps",
              "Environment": "dev",
              "Name": "private-subnet-development-Test-Sample",
              "PrimaryContact": "test@example.com",
              "ProjectName": "Test-Sample",
              "Terraform": "True",
              "description": "private subnet for development-Test-Sample"
            },
            "vpc_id": "vpc-02bdcc11f28d4258c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202910432264:subnet/subnet-057f0c9b1d2b78a74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057f0c9b1d2b78a74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "202910432264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "DevOps",
              "Environment": "dev",
              "Name": "public-subnet-development-Test-Sample",
              "PrimaryContact": "test@example.com",
              "ProjectName": "Test-Sample",
              "Terraform": "True",
              "description": "public subnet for development-Test-Sample"
            },
            "tags_all": {
              "Department": "DevOps",
              "Environment": "dev",
              "Name": "public-subnet-development-Test-Sample",
              "PrimaryContact": "test@example.com",
              "ProjectName": "Test-Sample",
              "Terraform": "True",
              "description": "public subnet for development-Test-Sample"
            },
            "vpc_id": "vpc-02bdcc11f28d4258c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202910432264:vpc/vpc-02bdcc11f28d4258c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00f9d72541e5b7645",
            "default_route_table_id": "rtb-063abbf84cc8733a7",
            "default_security_group_id": "sg-01c33cf48a03e2096",
            "dhcp_options_id": "dopt-010271b4cd1eecaff",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02bdcc11f28d4258c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-063abbf84cc8733a7",
            "owner_id": "202910432264",
            "tags": {
              "Department": "DevOps",
              "Environment": "dev",
              "Name": "vpc-development-Test-Sample",
              "PrimaryContact": "test@example.com",
              "ProjectName": "Test-Sample",
              "Terraform": "True",
              "description": "VPC for development-Test-Sample"
            },
            "tags_all": {
              "Department": "DevOps",
              "Environment": "dev",
              "Name": "vpc-development-Test-Sample",
              "PrimaryContact": "test@example.com",
              "ProjectName": "Test-Sample",
              "Terraform": "True",
              "description": "VPC for development-Test-Sample"
            }
          }
        }
      ]
    }
  ]
}